k8s/ciliumnetworkpolicy/default-deny-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: cilium-policy
spec:
  endpointSelector: {}
  ingress: []
